--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="static/style.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
-<body style="background-color: #e9ecef;">
+<body >
   <div class="mt-3">
     <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
   </div>
@@ -22,9 +22,9 @@
 
   <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container " >
   <center>
-  <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+  <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
   ,#0083b0);">
     <img src="static/images/murali.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
     <br><br>
@@ -38,7 +38,7 @@
 
 <br><br>
     <center>
-      <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
         <img src="static/images/smitha.jpg" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
         <br><br>
@@ -53,7 +53,7 @@
     <br><br>
 
     <center>
-      <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
         <img src="static/images/saravanan.jpg" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
         <br><br>
