--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -96,6 +96,12 @@
         &nbsp;
         <li class="nav-item">
 
+          <a class="nav-link text-white" href="/keynote">KeynoteSpeakers</a>
+
+        </li>
+          &nbsp;
+        <li class="nav-item">
+
           <a class="nav-link text-white" href="/chiefguests">Chief Guests</a>
 
         </li>
