--- a/templates/sccommittee.html
+++ b/templates/sccommittee.html
@@ -22,10 +22,10 @@
 
   <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container " >
     <center>
 
-      <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
         ,#0083b0);">
 
           <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr.  SHEKAINA JUSTIN </h1><hr class="bg-light">
@@ -39,7 +39,7 @@
       <br><br>
     <center>
 
-    <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+    <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
         <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr.  ANTENEH YENENEH</h1><hr class="bg-light">
@@ -52,7 +52,7 @@
     <br><br>
     <center>
 
-    <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+    <div class="jumbotron p-5 shadow p-3 mb-5  rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
         <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. TUSHAR KANTI SEN</h1><hr class="bg-light">
