--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -10,7 +10,7 @@
 
 
 </head>
-<body style="background-color: #e9ecef;">
+<body >
   <div class="mt-3">
     <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
   </div>
@@ -24,9 +24,9 @@
 
   <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container   " >
   <center>
-  <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+  <div class="jumbotron p-5 shadow p-3 mb-5 rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
   ,#0083b0);">
     <img src="static/images/thomas.JPG" width="30%" height="300px" class="img-fluid" style="border-radius:10px">
     <br><br>
@@ -39,7 +39,7 @@
   </center>
     <br><br><br>
     <center>
-      <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      <div class=" jumbotron p-5 shadow p-3 mb-5 rounded text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
         <img src="static/images/anand.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
         <br><br>
