--- a/templates/keynote.html
+++ b/templates/keynote.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CHIEF GUESTS</title>
+    <title>KEYNOTE SPEAKERS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
-<body >
+<body style="background-color: #e9ecef;">
     <div class="mt-3">
         <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
@@ -18,80 +18,25 @@
 
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
             <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
-                   data-aos-duration="800">CHIEF | <span class="text-danger">GUESTS</span> </h1></div>
+                   data-aos-duration="800">KEYNOTE | <span class="text-danger">SPEAKERS</span></h1></div>
 
         </div>
 
         <br><br><br>
-
-   <div class="container  text-white" >
-    <center>
-    <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
-      ,#0083b0);">
-      <img class="img-fluid" src="static/images/Joshi.jpg" width="40%" height="300px" style="border-radius:10px;">
-      <br><br>
-      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. JOSHI MANOHAR</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean & HOD, </h3>
-      <h3 style="font-size:18px">Presidency University,</h3>
-      <h3 style="font-size:18px">Bangalore.</h3>
-     
-    </div>
-    </center>
-   </div>
-      <br><br><br>
-
-  <div class="container  text-white" >
-    <center>
-    <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px; background-image:linear-gradient(to left,#00b4db
-      ,#0083b0);">
-      <img class="img-fluid" src="static/images/Lekshmi.jpg" width="40%" height="300px" style="border-radius:10px;">
-      <br><br>
-      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. LEKSHMI</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean, </h3>
-      <h3 style="font-size:18px">R&D Department,</h3>
-      <h3 style="font-size:18px">Associate Professor,</h3>
-
-      <h3 style="font-size:18px">AMET University.</h3>
-
-    </div>
-    </center>
-   </div>
-  <br><br><br>
-
   <div class="container  text-white" >
     <center>
     <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
-      <img class="img-fluid" src="static/images/Dr.B.Vaikundaselvan.jpg" width="40%" height="300px" style="border-radius:10px;">
-      <br><br>
-      <h1 style="font-size:20px;font-weight:900; text-shadow: 2px 2px 4px #000000;">Dr. VAIKUNDA SELVAN </h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean,</h3>
-      <h3 style="font-size:18px">R&D Department,</h3>
-      <h3 style="font-size:18px">Nehru Group of Institutions,</h3>
-
-      <h3 style="font-size:18px">Coimbatore.</h3>
-
-    </div>
-    </center>
-   </div>
-  <br><br><br>
-
-  <div class="container   text-white" >
-    <center>
-    <div  class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
-      ,#0083b0); ">
-      <img class="img-fluid" src="static/images/Dr. D. SAM HARISON.jpg" width="40%" height="300px" style="border-radius:10px;">
-      <br><br>
-      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. SAM HARISON</h1><hr class="bg-light">
-      <h3 style="font-size:18px">HOD/EEE, </h3>
-      <h3 style="font-size:18px">Rohini College of Engineering,</h3>
       
-
+      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. S.V. DISHORE</h1><hr class="bg-light">
+      <h3 style="font-size:18px">Associate Professor,</h3>
+      <h3 style="font-size:18px">Mar Baselios College of Engineering and Technology,</h3>
       <h3 style="font-size:18px">Nagercoil.</h3>
 
     </div>
     </center>
    </div>
+      <br><br><br>
 
 
 
