--- a/templates/index.html
+++ b/templates/index.html
@@ -80,6 +80,9 @@
     <br>
   </div>
   <br><br><br>
+  <center>
+  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+  <br><br>
 <div class="container">
   <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="fade-right"  data-aos-easing="linear"
      data-aos-duration="800" >ABOUT ICMTEM 2024</h1><hr>
