--- a/templates/registration.html
+++ b/templates/registration.html
@@ -24,7 +24,9 @@
 
         
         <br><br><br>
-
+  <center>
+  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+  <br><br>
             <div class="container" style="padding:30px">
                 <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase" data-aos="zoom-in"  data-aos-easing="linear"
                    data-aos-duration="800">Conference Registration</h1><br>
