--- a/templates/venue.html
+++ b/templates/venue.html
@@ -27,7 +27,9 @@
           data-aos-duration="800">CONFERENCE VENUE </h1></div>
   </div>
   <br><br><br>
-
+  <center>
+  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+  <br><br>
   <div class="container ">
     <div class="row ">
       <div class="col-md-6 mt-3 shadow p-3 mb-5 bg-light rounded" >
