--- a/templates/wca.html
+++ b/templates/wca.html
@@ -22,7 +22,9 @@
             </div>
     
 <br><br><br>
-    
+    <center>
+    <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+    <br><br>
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded w-50" >
             <h1 style="color: darkblue;font-size:30px;font-weight:900" class="text-center">Who Can Attend Conference?</h1>
             <div  style="display:flex;justify-content:center">
