--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,13 @@
 body{
     font-family:roboto;
   }
+
+.blink{
+  animation: blink 2.0s linear infinite;
+}
+
+@keyframes blink{
+  0%{opacity: 0;}
+  50%{opacity: .5;}
+  100%{opacity: 1;}
+  }
