--- a/templates/ababtech.html
+++ b/templates/ababtech.html
@@ -35,7 +35,9 @@
         
         
 <br><br><br>
-        
+        <center>
+        <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+        <br><br>
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
           <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" class="text-center"  data-aos="zoom-in"  data-aos-easing="linear"
