--- a/templates/presentationguide.html
+++ b/templates/presentationguide.html
@@ -23,6 +23,9 @@
         </div>
         
         <br><br><br>
+  <center>
+  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+  <br><br>
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
             <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="zoom-in"  data-aos-easing="linear"
               data-aos-duration="800">ORAL PRESENTER</h1><hr>
