--- a/templates/journals.html
+++ b/templates/journals.html
@@ -23,7 +23,9 @@
         </div>
         
         <br><br><br>
-
+  <center>
+  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
+  <br><br>
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded ">
             <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center" data-aos="zoom-in" data-aos-easing="linear"
                data-aos-duration="800">Proceedings & Publications</h2>
