--- a/templates/awards.html
+++ b/templates/awards.html
@@ -24,8 +24,17 @@
         </div>
   <br><br><br>
   <center>
-  <button class="blink btn btn-lg btn-success"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">PAPER SUBMISSION</a></button></center>
-  <br><br>
+    <div>
+
+    <h4 style="font-weight:900">Submit your paper here: <a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank"><button class="blink btn btn-lg btn-danger">Click here</button></a></h4>
+      <br>
+      <h4 style="font-size:30px">or</h4>
+      <br>
+      <h4 style="font-weight:900">Send your paper to this mail ID : </h4>
+      <h4 class="text-primary">icmtem2024@gmail.com</h4>
+
+  </div></center>
+  <br><br><br>
   <div class="container bg-light p-5 shadow p-3 mb-5  rounded" >
       <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase" data-aos="zoom-in"  data-aos-easing="linear"
         data-aos-duration="800">Presentation Awards</h1>
