--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -6,6 +6,7 @@
     <title>CONTACT US</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 <style>
   th, td {
     padding: 10px;
@@ -26,7 +27,18 @@
                      data-aos-duration="800">CONTACT US </h1></div>
               </div>
   <br><br><br>
-  
+  <center>
+    <div>
+
+    <h4 style="font-weight:900">Submit your paper here: <a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank"><button class="blink btn btn-lg btn-danger">Click here</button></a></h4>
+      <br>
+      <h4 style="font-size:30px">or</h4>
+      <br>
+      <h4 style="font-weight:900">Send your paper to this mail ID : </h4>
+      <h4 class="text-primary">icmtem2024@gmail.com</h4>
+
+  </div></center>
+  <br><br><br>
   <div class="container ">
     <div class="row ">
       <div class="col-md-8 shadow p-3 mb-5 bg-light rounded" >
@@ -77,6 +89,10 @@
     </div>
 
     </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
