--- a/templates/nta.html
+++ b/templates/nta.html
@@ -21,7 +21,18 @@
                         data-aos-duration="800">NEED TO ATTEND | <span class="text-danger">CONFERENCE DETAILS</span> </h1></div>
             </div>
     <br><br><br>
+  <center>
+    <div>
 
+    <h4 style="font-weight:900">Submit your paper here: <a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank"><button class="blink btn btn-lg btn-danger">Click here</button></a></h4>
+      <br>
+      <h4 style="font-size:30px">or</h4>
+      <br>
+      <h4 style="font-weight:900">Send your paper to this mail ID : </h4>
+      <h4 class="text-primary">icmtem2024@gmail.com</h4>
+
+  </div></center>
+  <br><br><br>
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded w-50" >
             <h1 style="color: darkblue;font-size:30px;">Need To Attend Conference?</h1>
