--- a/templates/keynote.html
+++ b/templates/keynote.html
@@ -34,6 +34,48 @@
       <h3 style="font-size:18px">Nagercoil.</h3>
 
     </div>
+      <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        ,#0083b0);">
+
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. E. FANTIN IRUDAYA RAJ</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Assistant Professor,</h3>
+        <h3 style="font-size:18px">Dr. Sivanthi Aditanar College of Engineering,</h3>
+        <h3 style="font-size:18px">Tiruchendur.</h3>
+
+      </div>
+
+      <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        ,#0083b0);">
+
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. M. CHITHAMBARA THANU</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Assistant Professor,</h3>
+        <h3 style="font-size:18px">Dr. Sivanthi Aditanar College of Engineering,</h3>
+        <h3 style="font-size:18px">Tiruchendur.</h3>
+
+      </div>
+
+      <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        ,#0083b0);">
+
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. M. APPADURAI</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Associate Professor and Head of the Department,</h3>
+        <h3 style="font-size:18px">Nehru College of Engineering and Research Centre,</h3>
+        <h3 style="font-size:18px">Pampady, Kerala.</h3>
+
+      </div>
+
+      <div class="container jumbotron p-5 shadow p-3 mb-5 rounded" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+        ,#0083b0);">
+
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Mrs. R. SAHILA DEVI</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Assistant Professor and Head of the
+
+          Department,</h3>
+        <h3 style="font-size:18px">Rohini College of Engineering and Technology,</h3>
+        <h3 style="font-size:18px">Kanyakumari.</h3>
+
+      </div>
+      
     </center>
    </div>
       <br><br><br>
