--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -74,7 +74,7 @@
         <p>ICMTEM - 2024 | Kanyakumari, India</p>
         <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
         <p>WhatsApp: +91 9840511458</p>
-        <p>Email: programs.abtech@gmail.com</p>
+        <p>Email: icmtem2024@gmail.com</p>
 
       </div>
       <div class="col-md-4 bg-light" style="padding:10px;">
