--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -50,7 +50,7 @@
    <br>
      <h5 style="font-weight:900" ><span class="text-danger">WhatsApp:</span> +91 9840511458</h5>
      <br>
-     <h5 style="font-weight:900" > <span class="text-danger">Email:</span> programs.abtech@gmail.com</h5>   
+     <h5 style="font-weight:900" > <span class="text-danger">Email:</span> icmtem2024@gmail.com</h5>   
 
     </div>
 
@@ -77,7 +77,7 @@
           <p>ICMTEM - 2024 | Kanyakumari, India</p>
           <p>Call: +91 9840511458 , +91 8807068644 , +91 9363401105</p>
           <p>WhatsApp: +91 9840511458</p>
-          <p>Email: programs.abtech@gmail.com</p>
+          <p>Email: icmtem2024@gmail.com</p>
 
         </div>
         <div class="col-md-4 bg-light" style="padding:10px;">
