--- a/templates/keynote.html
+++ b/templates/keynote.html
@@ -29,7 +29,7 @@
       ,#0083b0);">
       
       <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. S.V. DISHORE</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Associate Professor,</h3>
+      <h3 style="font-size:18px">Assistant Professor,</h3>
       <h3 style="font-size:18px">Mar Baselios College of Engineering and Technology,</h3>
       <h3 style="font-size:18px">Nagercoil.</h3>
 
